tests/errors/spawnNotSend.milo
// @error: cannot send 'p' of type '*u8' across threads

from "std/thread" import {
    Thread
}

fn main(): i32 {
    var x: i32 = 42
    unsafe {
        let p = (&x) as *u8
        let t = Thread.spawn(move(): void => {
            print("ptr value: ", p as i64)
        }
        )!
        t.join()!
    }
    return 0
}
